--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <script src="ClickableButton.js"></script>
     <script src="SideBarMenu.js"></script>
     <script>
-        const menu1 = new SideBarMenu()
+        // const menu1 = new SideBarMenu()
         const menu2 = new SideBarMenu('green', 'right')
-        menu1.toggleMenu()
+        // menu1.toggleMenu()
 
-        const button = new ClickableButton(
-            'Toggle', menu2.toggleMenu.bind(menu2))
+       
     </script>
 </body>
 </html>
