--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <script src="ClickableButton.js"></script>
+<body style="text-align: center">
     <script src="SideBarMenu.js"></script>
     <script>
-        // const menu1 = new SideBarMenu()
+        const menu1 = new SideBarMenu()
         const menu2 = new SideBarMenu('green', 'right')
         // menu1.toggleMenu()
 
